gcwebxFrontend/src/app/components/esport/esport.component.css
.card {
  display:inline-block;
  width: 18rem;
  border: 0;
}
.card img{
  max-height: 300px;
  object-fit: cover;

  border: 0.2rem;
  border-color: white;
  border-top: 0;
  border-bottom: 0;
  border-style: solid;
  border-radius: 0;
}
.fa-twitter,.fa-youtube{
  color: #343a40;
}
.fa-twitter:hover,.fa-youtube:hover{
  color: white;
}
.card-img-overlay:hover{
  backdrop-filter: brightness(0.5) blur(4px);
}
.card-img-overlay:hover >  div{
  display: block;

}
.card-img-overlay div{
  display: none;
}
.valorant_bg{
  background-image: url('/assets/VAL_Overlay_Banner_v2.jpg');}
.rainbow_bg{
  background-image: url('/assets/rainbow_team_bg.jpg');
}
.card-img-top{
  background-color: black;
}
.card-body>h2{
  font-weight: 500;
}
.teamselection{
  background-color: #13151b;
  border-top: 0.3rem solid cyan;
  border-radius: 0.3rem;
}
.teamselector{
  border-top: 0.1rem solid cyan;
  border-radius: 0px;
  padding: 1rem;
}

@media (min-width: 1200px){
  .container{
    max-width: 990px;
  }

}
@media (min-width: 1400px){
  .container{
    max-width: 1310px;
  }

}
.match_container{
  background-color: #13151b;
  border-left: 1rem solid cyan;
  border-radius: 5px;
}
.matchtile_logo{
  max-height: 60px;
  object-fit: contain;
  max-width: 100%;
}
.dropdown-menu.show {
  display: contents;
}
.dropdown-menu.show  a:first-child {
  margin-top: 1rem;
}
.dropdown-menu{
  padding-top: 0.5em!important;
  padding-bottom: 0.5em!important;
  width: 100vw;
  margin: 0;
  border-radius: 0;
  max-width: 100%;
}

